# operations-software-varnish-libvmod-netmapper

./: .gitignore  Makefile.am  NEWS  README.rst  autogen.sh  configure.ac
acaux/: .gitignore
debian/: changelog  control  copyright  gbp.conf  libvmod-netmapper-dbg.lintian-overrides  libvmod-netmapper.install  libvmod-netmapper.lintian-overrides  libvmod-netmapper.manpages  rules
src/: .gitignore  Makefile.am  vmod_netmapper.c  vmod_netmapper.vcc  vnm.c  vnm.h  vnm_strdb.c  vnm_strdb.h  vnm_validate.c
src/nlt/: README  nlist.c  nlist.h  ntree.c  ntree.h
src/tests/: test01.json  test01.vtc  test01a.json  test01b.json  test01c.json
